<resources>
    <string name="app_name">Smart Dustbin System</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="select_vehicle">Select vehicle</string>

    <string name="title_activity_spalash">Smart Dustbin System</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="name">Name :</string>
    <string name="weight">Weight :</string>
    <string name="moisture">Moisture :</string>
    <string name="title_activity_route_screen_with_navigation">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Refresh</string>
    <string name="clean_city">Clean City</string>
    <string name="smart_city">Smart City</string>
</resources>
